<resources>
    <string name="app_name">Local Link</string>
    <string name="default_notification_channel_id" translatable="false">default_notification_channel_id</string>
    
    <string name="attraction_detail_tab_1">설명</string>
    <string name="attraction_detail_tab_2">모집</string>

    <string name="write_post_activity_page_title">관광지 모집</string>
    <string name="write_post_activity_et_label_1">제목</string>
    <string name="write_post_activity_et_hint_1">제목 입력</string>
    <string name="write_post_activity_et_label_2">사용언어</string>
    <string name="write_post_activity_et_hint_2">영어</string>
    <string name="write_post_activity_et_label_3">모집인원</string>
    <string name="write_post_activity_et_hint_3" translatable="false">1/10</string>
    <string name="write_post_activity_et_label_4">일시</string>
    <string name="write_post_activity_et_hint_4">날짜를 입력하세요</string>
    <string name="write_post_activity_extra_content">추가 정보</string>
    <string name="write_post_activity_extra_content_hint">그리고..</string>
    <string name="write_post_activity_post_button">등록</string>

    <string name="dialog_name_label">name</string>
    <string name="dialog_birth_label">birth</string>
    <string name="dialog_language_label">language</string>
    <string name="dialog_food_type_label">food type</string>
    <string name="dialog_detail_label">detail</string>

    <string name="dialog_name_value" translatable="false">David</string>
    <string name="dialog_birth_value" translatable="false">2000-07-08</string>
    <string name="dialog_language_value">english</string>
    <string name="dialog_food_type_value">korean food</string>
    <string name="dialog_detail_value" translatable="false"></string>
    <string name="dialog_submit_button">신청</string>
    <string name="dialog_submit_message" translatable="false">send</string>

    <string name="banner_1_main">Let\'s have lunch!</string>
    <string name="banner_1_sub">같이 밥 먹으며 친해져요</string>

    <string name="banner_2_main">Find Helper</string>
    <string name="banner_2_sub">한국 생활 중 모르는 일들을 도와드립니다!</string>

    <string name="banner_3_main">tourist spot</string>
    <string name="banner_3_sub">같이 관광하며 친해져요</string>

    <string name="bottom_menu_1">홈</string>
    <string name="bottom_menu_2">관광지</string>
    <string name="bottom_menu_3">유저리스트</string>
    <string name="bottom_menu_4">채팅리스트</string>
    <string name="bottom_menu_5">마이페이지</string>

    <string name="home_recycler_item">모집중</string>

    <string name="korean">한국어</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>
</resources>