<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/HomeList"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/bottom_menu_1" />

    <item
        android:id="@+id/tourList"
        android:icon="@drawable/baseline_tour_24"
        android:title="@string/bottom_menu_2" />

    <item
        android:id="@+id/userList"
        android:icon="@drawable/baseline_supervised_user_circle_24"
        android:title="@string/bottom_menu_3" />



    <item
        android:id="@+id/chatroomList"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/bottom_menu_4" />

    <item
        android:id="@+id/myPage"
        android:icon="@drawable/baseline_contact_page_24"
        android:title="@string/bottom_menu_5" />
</menu>