<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding">

    <ImageView
        android:id="@+id/back_image_view"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:maxWidth="50dp"
        android:maxHeight="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/outline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/page_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="23sp"
        android:textColor="@color/primary"
        android:text="@string/write_post_activity_page_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/major_title_text_style"
        tools:text="관광지 모집"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/page_name_text_view">

        <LinearLayout
            android:id="@+id/primary_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/page_name_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginEnd="@dimen/margin"
                    android:textColor="@color/primary"
                    android:text="@string/write_post_activity_et_label_1"
                    android:layout_weight="2"
                    style="@style/major_title_text_style"/>
                <EditText
                    android:id="@+id/write_post_edit_text_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin"
                    android:hint="@string/write_post_activity_et_hint_1"
                    android:layout_weight="8"
                    style="@style/edit_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginEnd="@dimen/margin"
                    android:textColor="@color/primary"
                    android:text="@string/write_post_activity_et_label_2"
                    android:layout_weight="2"
                    style="@style/major_title_text_style"/>
                <EditText
                    android:id="@+id/write_post_edit_text_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin"
                    android:hint="@string/write_post_activity_et_hint_2"
                    android:layout_weight="8"
                    style="@style/edit_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginEnd="@dimen/margin"
                    android:textColor="@color/primary"
                    android:text="@string/write_post_activity_et_label_3"
                    android:layout_weight="2"
                    style="@style/major_title_text_style"/>
                <EditText
                    android:id="@+id/write_post_edit_text_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin"
                    android:hint="@string/write_post_activity_et_hint_3"
                    android:layout_weight="8"
                    style="@style/edit_text"
                    tools:hint="1/10"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginEnd="@dimen/margin"
                    android:textColor="@color/primary"
                    android:text="@string/write_post_activity_et_label_4"
                    android:layout_weight="2"
                    style="@style/major_title_text_style"/>
                <EditText
                    android:id="@+id/write_post_edit_text_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin"
                    android:hint="@string/write_post_activity_et_hint_4"
                    android:layout_weight="8"
                    style="@style/edit_text"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondary_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/primary_content_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/write_post_activity_extra_content"
                style="@style/major_title_text_style"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_stroke_sencondary">

                <ImageView
                    android:id="@+id/camera_image_view"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/outline_photo_camera_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="0/5"
                    tools:text="0/5"/>
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/posting_content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="8"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:gravity="top"
            android:padding="@dimen/padding"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_stroke_sencondary"
            android:textColorHint="@color/hint_text_color"
            android:hint="@string/write_post_activity_extra_content_hint"
            app:layout_constraintTop_toBottomOf="@id/secondary_content_layout"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/major_title_text_size"
            android:layout_marginTop="15dp"
            android:text="@string/write_post_activity_post_button"
            app:layout_constraintTop_toBottomOf="@id/posting_content_edit_text"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>